--- a/Series.ipynb
+++ b/Series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "solved-effort",
+   "id": "standard-glasgow",
    "metadata": {},
    "source": [
     "### Create a series object from a python list"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bronze-commander",
+   "id": "expanded-asian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "veterinary-theta",
+   "id": "royal-romania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "julian-resistance",
+   "execution_count": 3,
+   "id": "fallen-uniform",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    chocolate\n",
+       "1      vanilla\n",
+       "2    straberry\n",
+       "3       raisin\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd."
+    "pd.Series(ice_cream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "thorough-consultation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     4\n",
+       "1     5\n",
+       "2     8\n",
+       "3    16\n",
+       "4    23\n",
+       "5    46\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lottery = [4, 5, 8, 16, 23, 46]\n",
+    "\n",
+    "pd.Series(lottery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "rubber-turner",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3     True\n",
+       "4    False\n",
+       "5     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "registrations = [True, False, False, True, False, True]\n",
+    "\n",
+    "pd.Series(registrations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "civic-yacht",
+   "metadata": {},
+   "source": [
+    "### Create a series object form a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "identical-development",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Aardvak        An animal\n",
+       "Banana           A Fruit\n",
+       "Cyan       Another color\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "webster = {\"Aardvak\" : \"An animal\",\n",
+    "          \"Banana\" : \"A Fruit\",\n",
+    "          \"Cyan\" : \"A color\"}\n",
+    "\n",
+    "pd.Series(webster)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "violent-requirement",
+   "metadata": {},
+   "source": [
+    "### Intro to Attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "disabled-amendment",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Smart\n",
+       "1     Handsome\n",
+       "2    Brilliant\n",
+       "3       Humble\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "about_me = [\"Smart\", \"Handsome\", \"Brilliant\", \"Humble\"]\n",
+    "s = pd.Series(about_me)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "likely-miniature",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Smart', 'Handsome', 'Brilliant', 'Humble'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "greek-candidate",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=4, step=1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "existing-transport",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "rental-client",
+   "metadata": {},
+   "source": [
+    "### Intro to Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "personalized-photographer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2.99\n",
+       "1    4.45\n",
+       "2    1.36\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices = [2.99, 4.45, 1.36]\n",
+    "a= pd.Series(prices)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "certified-victoria",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "impressive-mobility",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.095480000000006"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.product()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "formal-emphasis",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.9333333333333336"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infectious-climb",
+   "id": "guilty-substitute",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -49,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "formed-graham",
+   "id": "brief-conservation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,15 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-administrator",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "wired-passion",
+   "id": "conceptual-saskatchewan",
    "metadata": {},
    "outputs": [],
    "source": []
