--- a/Series.ipynb
+++ b/Series.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "expanded-asian",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "royal-romania",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fallen-uniform",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "thorough-consultation",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "rubber-turner",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,9 +128,9 @@
     {
      "data": {
       "text/plain": [
-       "Aardvak        An animal\n",
-       "Banana           A Fruit\n",
-       "Cyan       Another color\n",
+       "Aardvak    An animal\n",
+       "Banana       A Fruit\n",
+       "Cyan         A color\n",
        "dtype: object"
       ]
      },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "disabled-amendment",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "likely-miniature",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "array(['Smart', 'Handsome', 'Brilliant', 'Humble'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "greek-candidate",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "RangeIndex(start=0, stop=4, step=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "existing-transport",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "personalized-photographer",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "certified-victoria",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "8.8"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "impressive-mobility",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "18.095480000000006"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "formal-emphasis",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "2.9333333333333336"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,28 +343,153 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "guilty-substitute",
+   "cell_type": "markdown",
+   "id": "speaking-malawi",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Parameters and Arguments"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "brief-conservation",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Monday           Apple\n",
+       "Tuesday         Orange\n",
+       "Wednesday         Plum\n",
+       "Thursday         Grape\n",
+       "Friday       Blueberry\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"Apple\", \"Orange\", \"Plum\", \"Grape\", \"Blueberry\"]\n",
+    "weekdays = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\"]\n",
+    "\n",
+    "pd.Series(fruits, weekdays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "universal-disclosure",
+   "metadata": {},
+   "source": [
+    "#### Index does not need to be unique"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "conceptual-saskatchewan",
+   "execution_count": 20,
+   "id": "amino-acoustic",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Monday            Apple\n",
+       "Tuesday          Orange\n",
+       "Wednesday          Plum\n",
+       "Thursday          Grape\n",
+       "Friday        Blueberry\n",
+       "Monday       Watermelon\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"Apple\", \"Orange\", \"Plum\", \"Grape\", \"Blueberry\", \"Watermelon\"]\n",
+    "weekdays = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Monday\"]\n",
+    "\n",
+    "pd.Series(fruits, index=weekdays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adequate-movie",
+   "metadata": {},
+   "source": [
+    "### Import Series with read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "confirmed-retro",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Bulbasaur\n",
+       "1         Ivysaur\n",
+       "2        Venusaur\n",
+       "3      Charmander\n",
+       "4      Charmeleon\n",
+       "          ...    \n",
+       "716       Yveltal\n",
+       "717       Zygarde\n",
+       "718       Diancie\n",
+       "719         Hoopa\n",
+       "720     Volcanion\n",
+       "Name: Pokemon, Length: 721, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon = pd.read_csv(\"pandas/pokemon.csv\", usecols=[\"Pokemon\"], squeeze=True)\n",
+    "pokemon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "regulation-andrew",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        50.12\n",
+       "1        54.10\n",
+       "2        54.65\n",
+       "3        52.38\n",
+       "4        52.95\n",
+       "         ...  \n",
+       "3007    772.88\n",
+       "3008    771.07\n",
+       "3009    773.18\n",
+       "3010    771.61\n",
+       "3011    782.22\n",
+       "Name: Stock Price, Length: 3012, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google = pd.read_csv(\"pandas/google_stock_price.csv\", squeeze=True)\n",
+    "google"
+   ]
   }
  ],
  "metadata": {
